prevent footer icons from wrapping

--- a/css-files/style.css
+++ b/css-files/style.css
@@ -18,3 +18,11 @@ body {
     height: 100vh;
     background-color: blue;
 }
+
+.footer-socials {
+    display: inline-block;
+}
+
+.footer {
+    justify-content: space-between;
+}
